commons: remove plexus-utils as a dependency